# AnalogExif

./: .gitignore  AnalogExif.pro  AnalogExif.qtvscr  AnalogExif.rc  AnalogExif.sln  AnalogExif.vcproj  AnalogExif.vcproj.vspscc  AnalogExif.vcxproj  AnalogExif.vcxproj.filters  CHANGES  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  analogexif.cpp  analogexif.h  analogexifoptions.cpp  checkedgeartreeview.h  current-version.xml  editgeartagsmodel.cpp  editgeartreemodel.cpp  exifitem.cpp  exifitemdelegate.cpp  exifitemdelegate.h  exiftreemodel.cpp  exifutils.cpp  exifutils.h  gearlistmodel.cpp  gearlistmodel.h  geartreemodel.cpp  geartreemodel.h  main.cpp  optgeartemplatemodel.h  parseVersions.vbs  vcpkg.json
include/: aboutdialog.h  analogexif.h  analogexifoptions.h  asciistringdialog.h  asciitextdialog.h  autofillexpnum.h  checkedgeartreeview.h  copymetadatadialog.h  dirsortfilterproxymodel.h  editgear.h  editgeartagsmodel.h  editgeartreemodel.h  edittagselectvalues.h  emptyspinbox.h  exifitem.h  exifitemdelegate.h  exiftreemodel.h  exifutils.h  gearlistmodel.h  gearlistview.h  geartableview.h  geartreemodel.h  geartreeview.h  metadatatagcompleter.h  multitagvaluesdialog.h  onlineversionchecker.h  optgeartemplatemodel.h  optgeartemplateview.h  progressdialog.h  tagnameeditdialog.h  tagnameitemdelegate.h  tagselectvalsitemdelegate.h  tagtypeitemdelegate.h  version.h.in
lagacy/: AnalogExif.nsi
res/: AnalogExif.rc  analogexif.qrc  version.xml  version.xml.in
src/: aboutdialog.cpp  analogexif.cpp  analogexifoptions.cpp  asciistringdialog.cpp  asciitextdialog.cpp  autofillexpnum.cpp  copymetadatadialog.cpp  dirsortfilterproxymodel.cpp  editgear.cpp  editgeartagsmodel.cpp  editgeartreemodel.cpp  edittagselectvalues.cpp  exifitem.cpp  exifitemdelegate.cpp  exiftreemodel.cpp  exifutils.cpp  gearlistmodel.cpp  geartreemodel.cpp  main.cpp  metadatatagcompleter.cpp  multitagvaluesdialog.cpp  onlineversionchecker.cpp  optgeartemplatemodel.cpp  progressdialog.cpp  tagnameeditdialog.cpp  tagnameitemdelegate.cpp  tagselectvalsitemdelegate.cpp  tagtypeitemdelegate.cpp
ui/: aboutdialog.ui  aboutdialog_mac.ui  analogexif.ui  analogexif_mac.ui  analogexifoptions.ui  asciistringdialog.ui  asciistringdialog_mac.ui  asciitextdialog_mac.ui  autofillexpnum.ui  copymetadatadialog.ui  editgear.ui  editgear_mac.ui  edittagselectvalues.ui  multitagvaluesdialog.ui  progressdialog.ui  tagnameeditdialog.ui
